trunk/Archive2/52/b8bb28f98d8260/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:1: error: expected unqualified-id before 'case'
 case sf::Keyboard::Key::Left: {
 ^
main.cpp:7:1: error: expected unqualified-id before 'case'
 case sf::Keyboard::Key::Right: {
 ^
main.cpp:10:1: error: expected unqualified-id before 'case'
 case sf::Keyboard::Key::Up: {
 ^
main.cpp:16:1: error: expected unqualified-id before 'case'
 case sf::Keyboard::Key::Down: {
 ^
